chore: add local documentation

--- a/.luarc.json
+++ b/.luarc.json
@@ -1,17 +1,40 @@
 {
   "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
-  "diagnostics.globals": ["import"],
-  "diagnostics.severity": { "duplicate-set-field": "Hint" },
-  "format.defaultConfig": { "indent_style": "space", "indent_size": "4" },
-  "runtime.builtin": { "io": "disable", "os": "disable", "package": "disable" },
-  "runtime.nonstandardSymbol": ["+=", "-=", "*=", "/=", "//=", "%=", "<<=", ">>=", "&=", "|=", "^="],
+  "diagnostics.globals": [
+    "import"
+  ],
+  "diagnostics.severity": {
+    "duplicate-set-field": "Hint"
+  },
+  "format.defaultConfig": {
+    "indent_size": "4",
+    "indent_style": "space"
+  },
+  "runtime.builtin": {
+    "io": "disable",
+    "os": "disable",
+    "package": "disable"
+  },
+  "runtime.nonstandardSymbol": [
+    "+=",
+    "-=",
+    "*=",
+    "/=",
+    "//=",
+    "%=",
+    "<<=",
+    ">>=",
+    "&=",
+    "|=",
+    "^="
+  ],
   "runtime.special": {
     "import": "require"
   },
   "runtime.version": "Lua 5.4",
-  "workspace.preloadFileSize": 1000,
   "workspace.library": [
-    "/Users/mogita/Developer/playdate-luacats",
-    "source"
-  ]
+    "./.vscode/playdate-luacats",
+    "./source"
+  ],
+  "workspace.preloadFileSize": 1000
 }
