--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,12 +1,15 @@
-// Specifies that the debugger launch task should use the Playdate Debug extension
 {
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "playdate",
+            "name": "Run Game",
+            "type": "node",
             "request": "launch",
-            "name": "Playdate: Debug",
-            "preLaunchTask": "Playdate: Debug Build"
+            "runtimeExecutable": "make",
+            "runtimeArgs": ["run"],
+            "console": "integratedTerminal",
+            "cwd": "${workspaceFolder}",
+            "skipFiles": ["<node_internals>/**"]
         }
     ]
 }
