--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,6 @@
 // Shows the recommended extensions popup
 {
     "recommendations": [
-        "sumneko.lua",
-        "midouest.playdate-debug"
+        "sumneko.lua"
     ]
 }
